--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -2,17 +2,23 @@
     font: menu;
 }
 
-.wrapper {
-    display: grid;
+body {
+    background-color: #1e1e1e;
+    color: #e6e2e2;
+}
+
+.text {
+    background-color: transparent;
+    color: aliceblue;
+    width: 100%;
+    height: 100vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
     padding: 1rem;
+    font-size: 1.3rem;
+    resize: none;
 }
 
-.line {
-    font-size: 1.25rem;
-    background-color: antiquewhite;
-    border: 1px solid salmon;
-}
-
-.line:focus {
+.text:focus {
     outline: none;
 }
