--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -7,16 +7,17 @@ body {
     color: #e6e2e2;
 }
 
+.wrapper {
+    display: grid;
+    padding: 1rem;
+}
+
 .text {
-    background-color: transparent;
+    background-color: salmon;
     color: aliceblue;
-    width: 100%;
-    height: 100vh;
     overflow-y: scroll;
     overflow-x: hidden;
-    padding: 1rem;
     font-size: 1.3rem;
-    resize: none;
 }
 
 .text:focus {
