add: new markdown logic

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -23,3 +23,18 @@ body {
 .text:focus {
     outline: none;
 }
+
+.h1 {
+    font-size: 2.5rem;
+    color: aquamarine;
+}
+
+.h2 {
+    font-size: 2rem;
+    color: beige;
+}
+
+.h3 {
+    font-size: 1.5rem;
+    color: green;
+}
